--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "nodejs",
+  "name": "placelist-back",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon app.js"
   },
-  "author": "",
+  "author": "kwonjounghun <kjh0102321@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "body-parser": "~1.14.2",
+    "cors": "^2.8.4",
     "ejs": "~2.4.1",
     "express": "^4.15.4",
     "express-session": "~1.13.0",
+    "got": "^7.1.0",
+    "iconv-lite": "^0.4.19",
     "jsonwebtoken": "^8.0.1",
     "mongoose": "^4.11.12",
-    "morgan": "^1.8.2"
-  }
+    "morgan": "^1.8.2",
+    "nodemon": "^1.12.1"
+  },
+  "repository": "https://github.com/kwonjounghun/placelist-back.git"
 }
